--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
       </div>
     </section>
     <footer id="footer">
-      <i class="fab fa-twitter footer-icon"><a href="https://www.facebook.com/nikhil.rathore.12382923"></a></i>
-      <i class="fab fa-facebook footer-icon"><a href="https://www.facebook.com/nikhil.rathore.12382923"></a></i>
+      <a href="https://www.facebook.com/nikhil.rathore.12382923"><i class="fab fa-twitter footer-icon"></i></a>
+      <a href="https://www.facebook.com/nikhil.rathore.12382923"><i class="fab fa-facebook footer-icon"></i></a>
       <i class="fab fa-instagram footer-icon"></i>
       <i class="fas fa-envelope footer-icon"></i>
       <p class="footer-content">© Copyright 2020</p>
