Change footer links

--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
           We can code while eat pancakes.<br>
           Yalla let's Do it!
         </p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <a class="btn" href="mailto:nikhilrathore600@email.com">CONTACT ME</a>
       </div>
     </section>
     <footer id="footer">
-      <a href="https://www.facebook.com/nikhil.rathore.12382923"><i class="fab fa-twitter footer-icon"></i></a>
+      <a href="https://twitter.com/nikhilrathore63"><i class="fab fa-twitter footer-icon"></i></a>
       <a href="https://www.facebook.com/nikhil.rathore.12382923"><i class="fab fa-facebook footer-icon"></i></a>
-      <i class="fab fa-instagram footer-icon"></i>
-      <i class="fas fa-envelope footer-icon"></i>
+      <a href="https://www.instagram.com/nikhil_rathore99/"><i class="fab fa-instagram footer-icon"></i></a>
+      <a class="btn" href="mailto:nikhilrathore600@email.com"><i class="fas fa-envelope footer-icon"></i></a>
       <p class="footer-content">© Copyright 2020</p>
     </footer>
   </body>
