--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <a href="https://twitter.com/nikhilrathore63"><i class="fab fa-twitter footer-icon"></i></a>
       <a href="https://www.facebook.com/nikhil.rathore.12382923"><i class="fab fa-facebook footer-icon"></i></a>
       <a href="https://www.instagram.com/nikhil_rathore99/"><i class="fab fa-instagram footer-icon"></i></a>
-      <a class="btn" href="mailto:nikhilrathore600@email.com"><i class="fas fa-envelope footer-icon"></i></a>
+      <a href="mailto:nikhilrathore600@email.com"><i class="fas fa-envelope footer-icon"></i></a>
       <p class="footer-content">© Copyright 2020</p>
     </footer>
   </body>
